Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15899

Server crashes in st_join_table::is_inner_table_of_outer_join

    XMLWordPrintable

Details

    Description

      create or replace table `x` (`f1` int,`f2` int,`f4` int);
      insert into `x` values (3,1,1),(3,0,9),(0,1,8),(9,0,0),(3,0,9);
       
      with cte as (select  median(f2) over (partition by f1) as k1 from x order by f1),
      cte1 as (select median(f4) over (partition by f1) as k2 from x)
      select k1,k2 from cte1, cte;
      

      #3  <signal handler called>
      #4  0x00005630232dabf2 in st_join_table::is_inner_table_of_outer_join (this=0x0) at /home/alice/git/10.3/sql/sql_select.h:532
      #5  0x00005630234501e3 in JOIN::check_for_splittable_materialized (this=0x7fbce0019c48) at /home/alice/git/10.3/sql/opt_split.cc:356
      #6  0x00005630232a81fe in JOIN::check_two_phase_optimization (this=0x7fbce0019c48, thd=0x7fbce0000b00) at /home/alice/git/10.3/sql/sql_select.cc:9263
      #7  0x0000563023292871 in JOIN::optimize_inner (this=0x7fbce0019c48) at /home/alice/git/10.3/sql/sql_select.cc:1854
      #8  0x00005630232910e1 in JOIN::optimize (this=0x7fbce0019c48) at /home/alice/git/10.3/sql/sql_select.cc:1431
      #9  0x00005630232084a5 in mysql_derived_optimize (thd=0x7fbce0000b00, lex=0x7fbce0004880, derived=0x7fbce00187e0) at /home/alice/git/10.3/sql/sql_derived.cc:938
      #10 0x00005630232069ee in mysql_handle_single_derived (lex=0x7fbce0004880, derived=0x7fbce00187e0, phases=4) at /home/alice/git/10.3/sql/sql_derived.cc:197
      #11 0x0000563023291dc1 in JOIN::optimize_inner (this=0x7fbce00195f8) at /home/alice/git/10.3/sql/sql_select.cc:1671
      #12 0x00005630232910e1 in JOIN::optimize (this=0x7fbce00195f8) at /home/alice/git/10.3/sql/sql_select.cc:1431
      #13 0x000056302329a7ce in mysql_select (thd=0x7fbce0000b00, tables=0x7fbce00187e0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7fbce00195d8, unit=0x7fbce0004948, select_lex=0x7fbce00050c0) at /home/alice/git/10.3/sql/sql_select.cc:4138
      #14 0x000056302328ce2e in handle_select (thd=0x7fbce0000b00, lex=0x7fbce0004880, result=0x7fbce00195d8, setup_tables_done_option=0) at /home/alice/git/10.3/sql/sql_select.cc:382
      #15 0x00005630232582f0 in execute_sqlcom_select (thd=0x7fbce0000b00, all_tables=0x7fbce00187e0) at /home/alice/git/10.3/sql/sql_parse.cc:6539
      #16 0x000056302324e782 in mysql_execute_command (thd=0x7fbce0000b00) at /home/alice/git/10.3/sql/sql_parse.cc:3768
      #17 0x000056302325bcb5 in mysql_parse (thd=0x7fbce0000b00, rawbuf=0x7fbce0014d58 "with cte as\n(select  median(f2) over (partition by f1) as k1 from x order by f1),\ncte1 as\n(select median(f4) over (partition by f1) as k2 from x)\nselect k1,k2 from cte1, cte", length=173, parser_state=0x7fbcf0aba5d0, is_com_multi=false, is_next_command=false) at /home/alice/git/10.3/sql/sql_parse.cc:8001
      #18 0x00005630232491d9 in dispatch_command (command=COM_QUERY, thd=0x7fbce0000b00, packet=0x7fbce008ff01 "with cte as\n(select  median(f2) over (partition by f1) as k1 from x order by f1),\ncte1 as\n(select median(f4) over (partition by f1) as k2 from x)\nselect k1,k2 from cte1, cte", packet_length=173, is_com_multi=false, is_next_command=false) at /home/alice/git/10.3/sql/sql_parse.cc:1846
      #19 0x0000563023247c11 in do_command (thd=0x7fbce0000b00) at /home/alice/git/10.3/sql/sql_parse.cc:1391
      #20 0x00005630233aa187 in do_handle_one_connection (connect=0x563026792b00) at /home/alice/git/10.3/sql/sql_connect.cc:1402
      #21 0x00005630233a9f07 in handle_one_connection (arg=0x563026792b00) at /home/alice/git/10.3/sql/sql_connect.cc:1308
      #22 0x0000563023766a42 in pfs_spawn_thread (arg=0x5630267a6460) at /home/alice/git/10.3/storage/perfschema/pfs.cc:1862
      #23 0x00007fbcf755a6ba in start_thread (arg=0x7fbcf0abb700) at pthread_create.c:333
      #24 0x00007fbcf69ef41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      Attachments

        Issue Links

          Activity

            People

              igor Igor Babaev (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.5h
                  6.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.